fix: grid gap for policies, markdown max-height

--- a/src/app/components/marketplace-api-description/marketplace-api-description.component.scss
+++ b/src/app/components/marketplace-api-description/marketplace-api-description.component.scss
@@ -1,5 +1,5 @@
 .box{
-  height: 50vh;
+  max-height: 50vh;
   padding-left: 1%;
   padding-right: 1%;
 }
