--- a/src/app/components/marketplace-signup-stepper/marketplace-signup-stepper.component.scss
+++ b/src/app/components/marketplace-signup-stepper/marketplace-signup-stepper.component.scss
@@ -19,7 +19,7 @@ mat-stepper {
   justify-content: space-between;
   align-items: center;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 8px;
+  grid-column-gap: 32px;
   grid-row-gap: 32px;
 }
 
